--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
 
@@ -96,6 +96,16 @@
                     </configuration>
                 </plugin>
 
+                <plugin>
+                    <groupId>org.flywaydb</groupId>
+                    <artifactId>flyway-maven-plugin</artifactId>
+                    <version>9.17.0</version>
+                    <configuration>
+                        <url>jdbc:postgresql://localhost/project</url>
+                        <user>postgres</user>
+                        <password>app</password>
+                    </configuration>
+                </plugin>
 
             </plugins>
         </pluginManagement>
